# genstack

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.jsonc  buf.yaml  build.gradle.kts  commitlint.config.ts  gradle.properties  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.properties  rust-toolchain.toml  settings-gradle.lockfile  settings.gradle.kts  sonar-project.properties
.cargo/: config.toml
.dev/: detekt-baseline.xml  detekt.args  detekt.ts  detekt.yml  dist-fingerprint.mts  dist-fingerprints.sh  report-coverage.sh  report-tests.sh
.github/: codecov.yml  dependabot.yml  dependency-review.yml
.github/actions-rs/: grcov.yml
.github/workflows/: check.biome.yml  check.buf.yml  check.dependency-review.yml  check.detekt.yml  check.gradle-wrapper.yml  check.rust.yml  check.sonar.yml  check.spotless.yml  gradle-ci.mac.properties  gradle-ci.properties  job.build.yml  job.dependency-graph.yml  job.test.yml  job.triage.yml  on.pr.yml  on.push.yml  publish.all-npm.yml  (+2 more)
.husky/: pre-commit
builder/: package.json
config/: build.gradle.kts  package.json
gradle/: common-settings.gradle.kts  genstack.versions.toml  graalvm.versions.toml  init.gradle.kts  kotlinx.versions.toml  libs.versions.toml  npm.versions.toml  protocol.versions.toml  verification-keyring.gpg  verification-keyring.keys  verification-metadata.xml
protocol/: .gitignore  README.md  buf.gen.yaml  settings.gradle.kts
sdk/: Cargo.toml  build.gradle.kts  settings.gradle.kts
sdk/src/commonMain/: README.md
sdk/src/rust/: README.md  lib.rs
sdk/src/typescript/: README.md
(+22 files in other folders)
