[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[workspace]
resolver = "2"

members = [
    "packages/config",
    "packages/protocol",
    "packages/sdk",
    "packages/cli",
]

[workspace.dependencies]
## -- Modules
genstack-config = { path = "./packages/config" }
genstack-protocol = { path = "./packages/protocol" }
genstack-sdk = { path = "./packages/sdk" }
genstack = { path = "./packages/cli" }

## -- Dependencies
prost = "0.13"
prost-types = "0.13"

## -- Build-only dependencies
rusty-pkl = {  version = "0.1.2" }
