[package]
name = "genstack-sdk"
version = "0.1.1"
description = "Coming soon"
authors = ["Sam Gammon <sam@2amlogic.com>", "Robb Walters <robb@2amlogic.com>", "Dario Valdespino <dario@2amlogi.com>"]
edition = "2021"

[lib]
name = "genstack"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "./src/rust/lib.rs"

[dependencies]
genstack-config = { workspace = true }
genstack-protocol = { workspace = true }
